4301
Is this fixed?

The compiler rejects the code in 2.10.0.r25759-b20110929020424 with:

{code}
<console>:20: error: covariant type CaseDef occurs in contravariant position in type Collects.this.PMat[U] of value pmat
         def doMatch[U](x: C)(pmat: PMat[U]): U
                              ^
{code}
